fixed deprecated newInstance call